<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_students"
            android:icon="@drawable/ic_students"
            android:title="@string/title_students"/>

    <item
            android:id="@+id/navigation_face"
            android:icon="@drawable/ic_face"
            android:title="@string/title_face"/>

    <item
            android:id="@+id/navigation_my_account"
            android:icon="@drawable/ic_profile"
            android:title="@string/title_my_account"/>

    <item
            android:id="@+id/navigation_notifications"
            android:icon="@drawable/ic_notifications"
            android:title="@string/title_notifications"/>

</menu>