<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.home.NewsFeedFragment" android:id="@+id/frameLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        <ImageView
                android:src="@drawable/circular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/newFeedImageView"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/content_description"/>
        <TextView
                android:text="@string/news_feed_empty_title_teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/newsFeedTitleTextView" android:textSize="20sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/newsFeedSubtitleTextView"
                app:layout_constraintTop_toBottomOf="@+id/newFeedImageView" android:layout_marginTop="24dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/newsFeedSubtitleTextView"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:text="@string/news_feed_empty_subtitle_teacher" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/createNewsFeedButton"/>
        <Button
                android:text="@string/news_feed_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/createNewsFeedButton"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:backgroundTint="@color/colorSecondaryPurple"
                android:textColor="@android:color/white"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>