<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textAlignment="center">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:text="@string/bottom_sheet_title"
            android:gravity="center" android:layout_marginTop="16dp" android:layout_marginBottom="16dp"
            android:textStyle="bold" android:textColor="@android:color/black" android:textSize="18sp"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:weightSum="3" android:layout_marginBottom="16dp" android:baselineAligned="false">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_weight="1" android:id="@+id/bottom_sheet_menu_1">
            <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp" app:srcCompat="@drawable/circular"
                    android:id="@+id/imageView1"
                    android:layout_gravity="center" android:layout_margin="8dp"
                    android:contentDescription="@string/content_description"/>
            <TextView
                    android:text="@string/bottom_sheet_menu_title1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView1"
                    android:layout_marginBottom="8dp" android:textAlignment="center"/>
        </LinearLayout>


        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_weight="1" android:id="@+id/bottom_sheet_menu_2">
            <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp" app:srcCompat="@drawable/circular"
                    android:id="@+id/imageView2"
                    android:layout_gravity="center" android:layout_margin="8dp"
                    android:contentDescription="@string/content_description"/>
            <TextView
                    android:text="@string/bottom_sheet_menu_title2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView2"
                    android:layout_marginBottom="8dp" android:textAlignment="center"/>
        </LinearLayout>


        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_weight="1" android:id="@+id/bottom_sheet_menu_3">
            <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp" app:srcCompat="@drawable/circular"
                    android:id="@+id/imageView3"
                    android:layout_gravity="center" android:layout_margin="8dp"
                    android:contentDescription="@string/content_description"/>
            <TextView
                    android:text="@string/bottom_sheet_menu_title3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView3"
                    android:layout_marginBottom="8dp" android:textAlignment="center"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>