<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".ui.students.legacy.StudentsFragment"
                android:id="@+id/studentFragment">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/emptyStudentLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

            <ImageView
                    android:src="@drawable/circular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/studentsImageView"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:contentDescription="@string/content_description" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                    android:text="@string/students_empty_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/studentsTitleTextView" android:textSize="20sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/studentsSubtitleTextView"
                    app:layout_constraintTop_toBottomOf="@+id/studentsImageView" android:layout_marginTop="24dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/studentsSubtitleTextView"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:text="@string/students_empty_subtitle"
                    app:layout_constraintBottom_toTopOf="@+id/addMemberButton" android:layout_marginBottom="16dp"/>

            <Button
                    android:text="@string/member_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/addMemberButton"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:backgroundTint="@color/colorSecondaryPurple"
                    android:textColor="@android:color/white"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <com.google.android.material.tabs.TabLayout
            android:id="@+id/studentTabs"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:backgroundTint="@color/colorPrimary"
            app:tabMode="scrollable"
            app:tabMaxWidth="0dp"
            app:tabBackground="@color/colorPrimary"
            app:tabIndicatorColor="@android:color/white"
            app:tabGravity="fill"
            app:tabSelectedTextColor="@android:color/white"/>

    <androidx.viewpager.widget.ViewPager
            android:id="@+id/studentsViewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

</LinearLayout>